@@ -81,8 +81,13 @@ else {
 			else {
 				//Let's go!
 				$row=$result->fetch() ;
+				if ($_GET["search"]!="") {
+					print "<div class='linkTop'>" ;
+						print "<a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/Activities/activities_manage.php&search=" .$_GET["search"] . "'>Back to Search Results</a>" ;
+					print "</div>" ;
+				}
 				?>
-				<form method="post" action="<? print $_SESSION[$guid]["absoluteURL"] . "/modules/" . $_SESSION[$guid]["module"] . "/activities_manage_deleteProcess.php?gibbonActivityID=$gibbonActivityID" ?>">
+				<form method="post" action="<? print $_SESSION[$guid]["absoluteURL"] . "/modules/" . $_SESSION[$guid]["module"] . "/activities_manage_deleteProcess.php?gibbonActivityID=$gibbonActivityID&search=" . $_GET["search"] ?>">
 					<table class='smallIntBorder' cellspacing='0' style="width: 100%">	
 						<tr>
 							<td> 
