@@ -36,8 +36,8 @@ session_start() ;
 date_default_timezone_set($_SESSION[$guid]["timezone"]);
 
 $gibbonActivityID=$_POST["gibbonActivityID"] ;
-$URL=$_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_POST["address"]) . "/activities_manage_delete.php&gibbonActivityID=$gibbonActivityID" ;
-$URLDelete=$_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_POST["address"]) . "/activities_manage.php" ;
+$URL=$_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_POST["address"]) . "/activities_manage_delete.php&gibbonActivityID=$gibbonActivityID&search=" . $_GET["search"] ;
+$URLDelete=$_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_POST["address"]) . "/activities_manage.php&search=" . $_GET["search"] ;
 
 if (isActionAccessible($guid, $connection2, "/modules/Activities/activities_manage_delete.php")==FALSE) {
 	//Fail 0
