@@ -37,7 +37,7 @@ date_default_timezone_set($_SESSION[$guid]["timezone"]);
 
 $gibbonActivityID=$_GET["gibbonActivityID"] ;
 $gibbonActivitySlotID=$_GET["gibbonActivitySlotID"] ;
-$URL=$_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_GET["address"]) . "/activities_manage_edit.php&gibbonActivityID=$gibbonActivityID" ;
+$URL=$_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_GET["address"]) . "/activities_manage_edit.php&gibbonActivityID=$gibbonActivityID&search=" . $_GET["search"] ;
 
 if (isActionAccessible($guid, $connection2, "/modules/Activities/activities_manage_edit.php")==FALSE) {
 	//Fail 0
